--- a/README.pod
+++ b/README.pod
@@ -22,7 +22,12 @@ The Perl builtin C<print>, when not called with an explicit file handle, will pr
  print "To STDERR";
  select $stdin;
 
-L<Tie::Select> offers a localizable interface to C<select>. Simply assign a handle to the C<$SELECT> variable this module to change the C<select>-ed handle. If this is done with C<local> the change is dynamically bound to the enclosing scope.
+L<Tie::Select> offers a localizable interface to C<select>. Simply assign a handle to the C<$SELECT> variable provided by this module to change the C<select>-ed handle. If this is done with C<local> the change is dynamically bound to the enclosing scope. Therefore the above example becomes simply:
+
+ {
+   local $SELECT = *STDERR;
+   print "This goes to STDERR";
+ }
 
 The inspiration for this type of interface is L<File::chdir> which provides a similar localizable interface to the current working directory.
 
